# easy-image-grayscale

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/gui/: ice_gui_test.rs  iced_gui.rs  interface.rs  mod.rs
src/processing/: image_handling.rs  images.rs  mod.rs
