[package]
name = "easy-image-grayscale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
iced = "0.8.0"
image = {version = "0.24.5", features = ["png", "jpeg"]}
egui_extras = {version = "0.21.0", features = ["image"]}