[package]
name = "easy-image-grayscale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.8.0", features = ["image"]}
iced_native = "0.9.1"
image = {version = "0.24.5", features = ["png", "jpeg"]}
iced_aw = { version = "0.4.1", features = ["split"] }

[profile.dev]
opt-level = 2
incremental = true

[profile.release]
opt-level = 3
lto = true
#strip = true
codegen-units = 1


